--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.8.2",
     "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1",
     "winston-mongodb": "^5.1.0"
   }
 }
